update 'GC. ZGC.md' anki card